got the "next five" button to almost work!  Added a clickCounter

--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
           </div>
 
         </section>
-<!--
+
         <section id="searchFive">
 
           <form action="action_page.php" method="get" id="nextFive">
             <label for="tag">Type of GIF: </label>
             <input type="text" name="tag" id="tag2" value=''/>
             <br  />
-            <input type="submit" value="Submit">
+            <input id="1" type="submit" value="Submit">
             </form>
           <div class="fiveSpace">
 
           </div>
 
-        </section> -->
+        </section>
         </main>
     </div>
   </body>
